--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Comision 44i",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "mongoose": "^7.3.4"
