--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Comision 44i",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4"
   },
   "devDependencies": {
